Fixing some packaging things. Let me know if these aren't working for .deb, because they work well for sdist.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include *.txt
-include defs_dist.py
+include defs.py
 include setup.py
-recursive-include help/ *
+recursive-include help *
 recursive-include share/exposong/res *.png
 recursive-include share/exposong/i18n *
