Some fixes for deb-package

--- a/debian/exposong.desktop
+++ b/debian/exposong.desktop
@@ -2,7 +2,7 @@
 Name=ExpoSong
 Comment=A Worship presentation software
 Exec=/usr/bin/exposong
-Icon=/usr/share/exposong/images/es32.png
+Icon=es64.png
 Terminal=false
 Type=Application
-Categories=Multimedia;Office
+Categories=Office
