--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: exposong
 Section: x11
 Priority: optional
 Maintainer: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
-Build-Depends: cdbs, debhelper (>= 7), python-central (>=0.5.6)
+Build-Depends: cdbs, debhelper (>= 7), python-central (>=0.5.6), python (>=2.5), python-support
 XS-Python-Version: >= 2.5
 Standards-Version: 3.8.4
 Homepage: http://exposong.org
@@ -16,8 +16,12 @@ Description: Worship presentation software
  text and image slides in a Christian setting.
  .
  Features:
-  - Lyric, text and image presentations
-  - User-defined schedules
-  - On-screen notification
-  - Gradient or image backgrounds
-  - Uses OpenLyrics format for lyrics
+    * Image, lyric, and text presentations
+    * Images and gradient backgrounds
+    * Schedules
+    * On-screen notifications
+    * Logo and black screen
+    * Importing and Exporting possibilities
+    * Printing Support
+    * OpenLyrics Data Format
+    * Full-text search
