--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Homepage: http://exposong.org
 Package: exposong
 Architecture: all
 XB-Python-Version: ${python:Versions}
-Depends: ${misc:Depends}, ${python:Depends}, python-gtk2, python-cairo, python-gobject, gettext
+Depends: ${misc:Depends}, ${python:Depends}, python-gtk2, python-cairo, python-gobject
 Description: Worship presentation software
  ExpoSong is a presentation software with a focus on displaying lyrics, 
  text and image slides in a Christian setting.
