--- a/.hgignore
+++ b/.hgignore
@@ -1,6 +1,9 @@
 glob:*.pyc
+glob:*.orig
 glob:.cache
 glob:.project
 glob:.pydevproject
 glob:*.kpf
 glob:*.komodoproject
+glob:build/*
+glob:dist/*
