Checking more files with pylint

--- a/scripts/pylint_rc.conf
+++ b/scripts/pylint_rc.conf
@@ -33,7 +33,7 @@ load-plugins=
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=R0904,E0602,C0324,C0103,W0613,E1101,C0323
+disable=R0904,E0602,C0324,C0103,W0613,E1101,C0323,R0201,W0212,F0401,E1103,W0201
 
 
 [REPORTS]
