--- a/scripts/pylint_rc.conf
+++ b/scripts/pylint_rc.conf
@@ -5,7 +5,7 @@
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-#init-hook=
+init-hook="import sys,os;sys.path.insert(0, '../lib')"
 
 # Profiled execution.
 profile=no
@@ -33,7 +33,7 @@ load-plugins=
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=R0904,E0602,C0324,C0103,W0613,E1101,C0323,R0201,W0212,F0401,E1103,W0201
+disable=R0904,E0602,C0324,C0103,W0613,E1101,C0323,R0201,W0212,F0401,E1103,W0201,W0102,W0602
 
 
 [REPORTS]
@@ -51,7 +51,7 @@ include-ids=yes
 files-output=no
 
 # Tells whether to display a full report or only the messages
-reports=no
+reports=yes
 
 # Python expression which should return a note less than 10 (10 is the highest
 # note). You have access to the variables errors warning, statement which
