Updating features section in debian/control

--- a/debian/control
+++ b/debian/control
@@ -17,12 +17,10 @@ Description: Worship presentation software
  text and image slides in a Christian setting.
  .
  Features:
-    * Image, lyric, and text presentations
-    * Images and gradient backgrounds
+    * Create Songs or ExpoSong Presentations with mixed images and text
+    * Themes with background images, colors and gradients
     * Schedules
     * On-screen notifications
     * Logo and black screen
-    * Importing and Exporting possibilities
-    * Printing Support
-    * OpenLyrics Data Format
+    * Importing and Exporting
     * Full-text search
